- Ensure share panel has a very large z-index

--- a/css/defaultUI.css
+++ b/css/defaultUI.css
@@ -1344,7 +1344,7 @@ input::-ms-clear {
   right: 0px;
   top: 0px;
   height: 100% !important;
-  z-index: 100;
+  z-index: 100000;
   overflow-y: auto;
   width: 418px;
 }
